/*
 * Copyright and related rights waived via CC0
 *
 * You should have received a copy of the CC0 legalcode along with this
 * work. If not, see <http://creativecommons.org/publicdomain/zero/1.0/>.
 */
plugins {
    id "org.graalvm.internal.tck"
    id "org.jetbrains.kotlin.jvm" version "2.3.20"
}

String libraryVersion = tck.testedLibraryVersion.get()

dependencies {
    testImplementation "io.mockk:mockk-jvm:$libraryVersion"
    testImplementation 'org.assertj:assertj-core:3.22.0'
    testImplementation 'org.ow2.asm:asm-tree:9.7.1'
}

kotlin {
    jvmToolchain(21)
}

compileTestKotlin {
    kotlinOptions.jvmTarget = "21"
}

graalvmNative {
    binaries {
        test {
            buildArgs("--enable-monitoring=jcmd,jvmstat")
        }
    }
    agent {
        defaultMode = "conditional"
        modes {
            conditional {
                userCodeFilterPath = "user-code-filter.json"
            }
        }
    }
}

tasks.named("nativeTest").configure {
    runtimeArgs.add("-Djdk.attach.allowAttachSelf=true")
    runtimeArgs.add("-Djava.home=${System.getenv('JAVA_HOME')}")
    runtimeArgs.add("-Djava.class.path=${sourceSets.test.runtimeClasspath.asPath}")
}
